--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App {
   text-align: center;
-  padding: 1rem;
   background-color: rgb(54, 36, 71);
+  height:100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
 }
-.body{
-  height: 700px;
-  background-color: red;
-}
-
-
