--- a/src/Comps/controlButtons/controlButtons.css
+++ b/src/Comps/controlButtons/controlButtons.css
@@ -5,5 +5,5 @@
     max-width: 80%;
     border-radius: 20px;
     box-shadow: 0 12px 12px rgba(0, 0, 0, 0.2);
-    margin: auto;
+    margin:10px auto;
 }
