--- a/src/Comps/channel/channel.scss
+++ b/src/Comps/channel/channel.scss
@@ -5,7 +5,8 @@
     max-width: 80%;
     border-radius: 20px;
     box-shadow: 0 12px 12px rgba(0, 0, 0, 0.2);
-    margin: auto;
+    margin: 10px auto;
+
 }
 .mute{
     padding-bottom: "4px";
